--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "globals": "^15.14.0",
     "https-localhost": "^4.7.1",
     "postcss": "^8.4.49",
+    "react-markdown": "^10.0.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.5",
     "vite-plugin-pwa": "^0.21.1"
