--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "@wooorm/starry-night": "^3.6.0",
+    "github-markdown-css": "^5.8.1",
     "groq-sdk": "^0.9.1",
     "react": "^18.3.1",
     "react-audio-voice-recorder": "^2.2.0",
@@ -19,6 +21,9 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
+    "rehype-slug": "^6.0.0",
+    "rehype-starry-night": "^2.2.0",
+    "remark-toc": "^9.0.0",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
